# direct_marketing

./: README.md  direct-marketing-eda.ipynb  direct-marketing-pre-processing.ipynb  hello.py  pyproject.toml
.ipynb_checkpoints/: direct-marketing-eda-checkpoint.ipynb  direct-marketing-pre-processing-checkpoint.ipynb  direct-marketing-regression-checkpoint.ipynb  main-checkpoint.ipynb
direct-marketing/: README.md  direct-marketing-pre-processing.ipynb  direct-marketing-regression.ipynb  executed_direct-marketing-eda.ipynb  executed_direct-marketing-pre-processing.ipynb  executed_direct-marketing-regression.ipynb  main.ipynb  processed_data.parquet  pyproject.toml  raw_data.parquet
direct-marketing/.ipynb_checkpoints/: direct-marketing-eda-checkpoint.ipynb  executed_direct-marketing-eda-checkpoint.ipynb  main-checkpoint.ipynb
