[project]
name = "upskill2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "kaggle>=1.6.17",
    "kagglehub>=0.3.6",
    "matplotlib>=3.9.4",
    "nbconvert>=7.16.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyarrow>=18.1.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "sidetable>=0.9.1",
]
